--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   intl: ^0.19.0
   path_provider: ^2.1.4
+  package_info_plus: ^8.0.2
+  url_launcher: ^6.3.0
+  in_app_review: ^2.0.9
 
 dev_dependencies:
   flutter_test:
